// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShieldPage /> renders with registration disabled 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <form
    id="login-form"
  >
    <div>
      <div
        class="sc-bcXGCL iAhoTX"
      >
        <div
          class=" ql-editor wysiwyg-render"
        >
          <mock-value-for-field-"value" />
        </div>
      </div>
      <div
        class="sc-bcXGCL fVgOgb cap-form-control"
      >
        <label
          class="sc-bcXGCL fTPHCc cap-form-label"
          for=":r0:"
          style="margin-left: 0px; margin-top: 0px;"
        >
          <span
            class="sc-bcXGCL dQChsN cap-text"
            style="margin-left: 0px; margin-top: 0px;"
          >
            global.email
          </span>
        </label>
        <input
          aria-required="true"
          autocomplete="email"
          class="sc-bcXGCL sc-fXqqsB egzrup ieLfuE cap-input"
          id=":r0:"
          name="username"
          placeholder="email.placeholder"
          required=""
          type="email"
        />
      </div>
      <div
        class="sc-bcXGCL fVgOgb cap-form-control"
      >
        <label
          class="sc-bcXGCL fTPHCc cap-form-label"
          for=":r1:"
          style="margin-left: 0px; margin-top: 0px;"
        >
          <span
            class="sc-bcXGCL dQChsN cap-text"
            style="margin-left: 0px; margin-top: 0px;"
          >
            global.password
          </span>
        </label>
        <div
          class="sc-bcXGCL sc-fXqqsB hsfhbV ieLfuE cap-input-outer"
        >
          <input
            aria-required="true"
            autocomplete="off"
            class="sc-bcXGCL dANhtW cap-input"
            id=":r1:"
            name="password"
            required=""
            type="password"
          />
          <button
            aria-describedby=":r2:"
            class="sc-bcXGCL fROdoz"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="sc-bcXGCL sc-oZHua dXTqeC hQQZty cap-icon cap-input-icon"
              fill="none"
              height="1em"
              viewBox="0 0 12 10"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m1.903 9 8.333-8M4.65 8.134c.437.135.892.203 1.35.2 1.822.03 3.67-1.25 4.81-2.506a.74.74 0 0 0 0-.99 9 9 0 0 0-1.366-1.225M7.072 2.459a4.2 4.2 0 0 0-1.073-.126c-1.791-.03-3.644 1.223-4.81 2.505a.74.74 0 0 0 0 .99q.534.582 1.156 1.066"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="0.8"
              />
              <path
                d="M4.333 5.333a1.666 1.666 0 0 1 1.666-1.666M7.666 5.333A1.667 1.667 0 0 1 5.999 7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="0.8"
              />
            </svg>
          </button>
        </div>
      </div>
      <a
        class="sc-bcXGCL gudgoe cap-link"
        href="/resetting/request"
      >
        global.forgot_password
      </a>
      <div
        class="sc-bcXGCL gvdeaM"
      >
        <div
          class=" ql-editor wysiwyg-render"
        >
          <mock-value-for-field-"value" />
        </div>
      </div>
    </div>
    <button
      class="sc-bcXGCL sc-gGvGpy hRwdLZ jrAhSN cap-button"
      id="confirm-login"
      type="submit"
    >
      global.login_me
    </button>
  </form>
</DocumentFragment>
`;

exports[`<ShieldPage /> renders with registration disabled and classical auth by pass enabled 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div>
    <div
      class="sc-bcXGCL iAhoTX"
    >
      <div
        class=" ql-editor wysiwyg-render"
      >
        <mock-value-for-field-"value" />
      </div>
    </div>
    <div
      class="sc-bcXGCL gvdeaM"
    >
      <div
        class=" ql-editor wysiwyg-render"
      >
        <mock-value-for-field-"value" />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ShieldPage /> renders with registration enabled 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
</DocumentFragment>
`;
